[gd_scene load_steps=7 format=2]

[ext_resource path="res://rep_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://balance_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/TransferScene.gd" type="Script" id=3]
[ext_resource path="res://rep_theme.tres" type="Theme" id=4]
[ext_resource path="res://Liter-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
use_filter = true
font_data = ExtResource( 5 )

[node name="TransferScene" type="ColorRect"]
margin_top = 1.0
margin_right = 576.0
margin_bottom = 1025.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 100.0
margin_right = 556.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserName" type="Label" parent="VBoxContainer"]
margin_right = 536.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Загрузка..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 536.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Balance" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 451.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.145098, 0.741176, 0.239216, 1 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BalanceText" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 455.0
margin_right = 536.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.145098, 0.741176, 0.239216, 1 )
text = "REP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="."]
margin_top = 343.0
margin_right = 576.0
margin_bottom = 426.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.219608, 0.278431, 0.235294, 1 )
text = "загрузка..."
align = 1
valign = 1
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 476.0
margin_right = 556.0
margin_bottom = 626.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="LineEdit" parent="HBoxContainer2"]
margin_right = 266.0
margin_bottom = 150.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "amount"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButton" type="Button" parent="HBoxContainer2"]
margin_left = 270.0
margin_right = 536.0
margin_bottom = 150.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Отправить"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 206.0
margin_top = 874.0
margin_right = 398.0
margin_bottom = 944.0
text = "назад"
__meta__ = {
"_edit_use_anchors_": false
}
